# SocialScope

./: .gitignore  README.md  pyproject.toml
data/: Teachine Note Supplement - Porsche Taycan January 2022 Twitter Sample .csv  twitter_sample.csv  twitter_sample_10rows.csv
server/nginx/: socialscope.nginx
server/units/: socialscope.service
socialscope/: main.py
socialscope/routers/: tweet.py  tweets.py
socialscope/services/: sentiment_analysis.py  sentiment_openai.py  sentiment_roberta.py  sentiment_textblob.py
socialscope/utils/: data_processing.py
static/: index.html  tweet.html  tweets.html
