[tool.poetry]
name = "socialscope"
version = "0.1.0"
description = ""
authors = ["Zhi Li <lzblack@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
transformers = "^4.45.2"
nltk = "^3.9.1"
textblob = "^0.18.0.post0"
pandas = "^2.2.3"
numpy = "^2.1.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
